kub_django.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
      - name: django-app
        image: taskprojectkub:latest  # Replace with your actual image
        imagePullPolicy: Never
        command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi

      # volumes:
      # - name: app-code
      #   hostPath:
      #     path: .:/app
        #   type: Directory
      
---
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: NodePort
  selector:
    app: django-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
      nodePort: 30001
